// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GoogleSpreadsheetIcon: Component should render correctly 1`] = `
<googleIcon.svg
  style={
    Object {
      "height": "60px",
      "stroke": "#FFF",
      "width": "60px",
    }
  }
/>
`;

exports[`GoogleSpreadsheetIcon: Component should render with custom styles 1`] = `
<googleIcon.svg
  style={
    Object {
      "fill": "blue",
      "height": "60px",
      "stroke": "#FFF",
      "width": "60px",
    }
  }
/>
`;
